All Module add sidebar

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "vue-loading-overlay": "^3.4.0"
+        "vue-loading-overlay": "^3.4.0",
+        "vue-router": "^3.4.5"
     }
 }
